# kubeflow-evaluation

./: README.md  pyproject.toml
pipelines/: basic-component.ipynb  pipeline.yaml
